--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../src/assets/scss/base/index";
+@import "../src/assets/scss/vendor/bootstrap-base";
+@import "../src/assets/scss/vendor/bootstrap-components";
+// @import "../src/assets/scss/";
+@import "../src/assets/scss/components/index";
+@import "../src/assets/scss/utilities/index";
