--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!-- <p>App working</p> -->
-<router-outlet></router-outlet>
+<div class="wrapper w-100 h-100 overflow-auto">
+    <router-outlet></router-outlet>
+</div>
