--- a/src/app/header/body/body.component.html
+++ b/src/app/header/body/body.component.html
@@ -1,15 +1,39 @@
 <!-- <p>body works!</p> -->
-<main class="w-100 h-100 bg-primary p-5">
-    <div class="p-5 d-flex align-items-center position-relative">
-        <div>
-            <p class="mb-0 text-warning"><span class="text-warning pr-1">&#128525;</span>Easy way to learn and earn</p>
-            <h2 class="hero-text mb-0 text-white pt-4">Discove products to build a better workflow<span class="fa fa-star font-xl text-warning pl-2"></span></h2>
-            <p class="mb-0 text-white pt-4">Learn how to be a world class designer with right skills and the perfect experience</p>
+<main class="d-flex flex-column w-100 flex-grow-1 bg-primary">
+    <div class="p-2 px-md-5 pt-md-2 pb-md-5">
+        <div class="p-2 p-md-5 d-flex align-items-center position-relative">
+            <div class="hero-section">
+                <p class="mb-0 text-warning"><span class="text-warning pr-1">🙂</span>Easy way to learn and earn</p>
+                <h2 class="hero-text mb-0 text-white pt-4">Discove products to build a better workflow<span class="fa fa-star font-xl text-warning pl-2"></span></h2>
+                <p class="mb-0 text-white pt-4">Learn how to be a world class designer with right skills and the perfect experience</p>
+                <div class="p-2 mail-section d-flex justify-content-between mt-4">
+                    <input class="bg-transparent border-0 ml-3 text-white" autocomplete="off" type="email" name="email" id="email" placeholder="Enter your email">
+                    <button class="btn btn-warning">Join 5000+</button>
+                </div>
+            </div>
+            <div>
+                <figure class="mb-0 khaby pl-5 d-none d-lg-inline">
+                    <img src="../../../assets/images/avatar.png" alt="">
+                </figure>
+            </div>
         </div>
-        <div>
-            <figure class="mb-0 khaby pl-5">
-                <img src="../../../assets/images/avatar.png" alt="">
-            </figure>
-        </div>
+        <footer class="px-2 px-md-5">
+            <div class="footer-section d-flex flex-column flex-sm-row justify-content-center justify-content-md-start align-items-center p-4">
+                <figure class="mb-0 pr-4">
+                    <img src="../../../assets/images/nav-header.PNG" alt="">
+                </figure>
+                <h3 class="mb-0 text-white">Inspiration made easy</h3>
+                <p class="mb-0 text-white pr-5 pl-2 d-none d-md-inline">---------&rarr;</p>
+                <div class="d-flex flex-wrap align-items-center">
+                    <span class="fa fa-ge p-2 mr-3 bg-pink text-white rounded-circle"></span>
+                    <span class="fa fa-behance p-2 mr-3 bg-info text-white rounded-circle"></span>
+                    <span class="fa fa-product-hunt p-2 mr-3 bg-orange text-white rounded-circle"></span>
+                    <span class="fa fa-youtube-play p-2 mr-3 bg-danger text-white rounded-circle"></span>
+                    <span class="px-2 py-1 mr-3 bg-white text-black rounded-circle">ui</span>
+                    <span class="p-2 mr-3 text-info rounded-circle font-weight-bold font-xl">up</span>
+                    <span class="fa fa-html5 p-3 mr-3 text-orange bg-white rounded-circle font-weight-bold font-xxl"></span>
+                </div>
+            </div>
+        </footer>
     </div>
 </main>
