--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- <p>header works!</p> -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary px-5">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary px-5 sticky-top py-3">
     <a class="navbar-brand d-flex align-items-center" href="#">
         <figure class="mb-0 d-inline">
             <img src="../../assets/images/nav-header.PNG" alt="">
@@ -22,7 +22,7 @@
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <button class="btn btn-outline-warning mr-3 ml-5 px-3">Login</button>
+          <button class="btn btn-outline-warning mr-3 ml-0 ml-lg-5 my-3 my-lg-0 px-3">Login</button>
         </li>
         <li class="nav-item">
           <button class="btn btn-warning px-3">Signup</button>
